--- a/python_app/Dockerfile
+++ b/python_app/Dockerfile
@@ -1,12 +1,20 @@
-FROM python:3.8-alpine
+FROM python:3.9-alpine
+LABEL version="0.13"
 
 WORKDIR /
 
-RUN pip3 install --no-cache-dir --upgrade pip
 
 COPY requirements.txt requirements.txt
 RUN pip3 install --no-cache-dir -r requirements.txt 
 
-COPY . .
+RUN adduser -D user
+
+COPY app.py ./app/app.py
+
+USER user
+
+WORKDIR /app/
+
+EXPOSE 5000
 
 CMD [ "flask", "run", "--host=0.0.0.0"]
