--- a/python_app/Dockerfile
+++ b/python_app/Dockerfile
@@ -9,12 +9,14 @@ RUN pip3 install --no-cache-dir -r requirements.txt
 
 RUN adduser -D user
 
-COPY app.py ./app/app.py
+COPY main.py ./app/main.py
 
 USER user
 
 WORKDIR /app/
 
 EXPOSE 5000
+
+ENV FLASK_APP=main
 
 CMD [ "flask", "run", "--host=0.0.0.0"]
