--- a/ansible/python_app.yml
+++ b/ansible/python_app.yml
@@ -16,7 +16,7 @@
         dest: /opt/python_app
 
     - name: Run docker-compose
-      docker_compose: 
+      community.docker.docker_compose: 
         project_src: /opt/python_app
         files:
             - docker-compose.yml
