--- a/monitoring/docker-compose.yaml
+++ b/monitoring/docker-compose.yaml
@@ -11,6 +11,11 @@ services:
     command: -config.file=/etc/loki/local-config.yaml
     networks:
       - loki
+    deploy:
+      resources:
+        limits:
+          cpus: '0.1'
+          memory: 200M
 
   promtail:
     image: grafana/promtail:2.3.0
@@ -19,6 +24,11 @@ services:
     command: -config.file=/etc/promtail/config.yml
     networks:
       - loki
+    deploy:
+      resources:
+        limits:
+          cpus: '0.1'
+          memory: 200M
 
   grafana:
     image: grafana/grafana:latest
@@ -26,3 +36,28 @@ services:
       - "3000:3000"
     networks:
       - loki
+    deploy:
+      resources:
+        limits:
+          cpus: '0.1'
+          memory: 200M
+    # logging:
+    #     driver: "json-file"
+    #     options:
+    #         max-file: 3
+    #         max-size: 5m
+
+  prometheus:
+    image: prom/prometheus
+    ports:
+      - 9090:9090
+    networks:
+      - loki
+    volumes:
+        - ./prometheus/prometheus-config.yaml:/etc/prometheus/prometheus.yml
+    deploy:
+      resources:
+        limits:
+          cpus: '0.1'
+          memory: 200M
+    
