--- a/k8s/msk-time/templates/deployment.yaml
+++ b/k8s/msk-time/templates/deployment.yaml
@@ -53,6 +53,13 @@ spec:
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          volumeMounts:
+            - name: configmap-volume
+              mountPath: /mnt
+      volumes:
+        - name: configmap-volume
+          configMap: 
+            name: {{ include "msk-time.fullname" . }}-configmap
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
