--- a/k8s/msk-time/values.yaml
+++ b/k8s/msk-time/values.yaml
@@ -2,11 +2,17 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+initialDelaySeconds: 3
+
+replicaCount: 2
+
+
+configPath: "/mnt/"
+visitorsPath: "/app/"
 
 image:
   repository: r0ach20/devops
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
 
@@ -80,3 +86,12 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+statefulSet:
+  podManagementPolicy: "Parallel"
+  volumeClaimTemplates:
+    spec:
+      accessModes: [ "ReadWriteOnce" ]
+      resources:
+        requests:
+          storage: 256M
