--- a/k8s/msk-time/templates/statefulset.yaml
+++ b/k8s/msk-time/templates/statefulset.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   {{- if not .Values.autoscaling.enabled }}
   serviceName: {{ include "msk-time.fullname" . }}
-  podManagementPolicy: {{ .Values.statefulSet.podManagementPolicy }}
+  podManagementPolicy: {{ .Values.podManagementPolicy }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
   selector:
